syntax = "proto3";
option go_package = "github.com/MoAdelEzz/gRPC-Distribute-File-System";
package gRPC_DFS;


// ==================================================

message RegisterFileRequest {
    string filename = 1;
    int32 filesize = 2;
}

message RegisterFileResponse {
    int32 statusCode = 1;
}


// ==================================================

message SubscripeAsDataNodeRequest {

}

message SubscripeAsDataNodeResponse {
    int32 statusCode = 1;
}


// ==================================================

message HeartBeatRequest {
    int32 total_space = 1;
}

message HeartBeatResponse {
    int32 statusCode = 1;
}

// ==================================================


service Master2DatakeeperServices {
    rpc RegisterFile ( RegisterFileRequest ) returns ( RegisterFileResponse );
    rpc SubscripeAsDataNode ( SubscripeAsDataNodeRequest ) returns ( SubscripeAsDataNodeResponse );
    rpc HeartBeat    ( HeartBeatRequest )    returns ( HeartBeatResponse) {}
}
